# pycord-template

./: CLAUDE.md  Makefile  README.md  compose.dev.yml  compose.prod.yml  compose.stg.yml  compose.test.yml  compose.yml  data.diff  development.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check_healthy.yml  ci.yml  deploy.yml  sync.yml
app/: main.py
app/cogs/: admin.py  cog_manager.py  health_monitor.py
app/core/: config.py
app/db/: dump.py
app/db/crud/: base.py
app/utils/: discord.py  session.py
db/: dump.py  dumper.Dockerfile
discord/: Dockerfile  bot.py  newrelic.ini
discord/config/: bot_config.py
discord/util/: healthcheck.py
docker/: app.Dockerfile  db-tools.Dockerfile
envs/: aws-s3.env.example  db.env.example  discord.env.example  server.env.example
pgadmin/config/: servers.json
