[project]
name = "pycord-template"
version = "1.0.0"
description = "A template for creating a new discordbot"
authors = [{ name = "Yuki Watanabe", email = "ukwhatn@gmail.com" }]
requires-python = ">=3.12,<3.13"

[dependency-groups]
discord = [
    "py-cord[speed]>=2.6.1,<3",
    "redis>=6.1.0,<7",
    "sentry-sdk>=2.13.0,<3",
    "psutil>=7.0.0,<8",
]
dev = [
    "ruff>=0.11.0,<0.12",
    "bandit>=1.7.8,<2",
    "semgrep>=1.63.0,<2",
]
db = [
    "sqlalchemy>=2.0.32,<3",
    "psycopg2-binary>=2.9.9,<3",
    "pydantic>=2.8.2,<3",
    "pydantic-settings>=2.8.1,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"